--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: readMVT
 Type: Package
-Title: Read MapBox Vector Tiles from GeoServer with example calling code
+Title: Read MapBox Vector Tiles from GeoServer
 Version: 0.1.0
 Author: Bradley W. Compton
 Maintainer: Bradley W. Compton <bcompton@umass.edu>
@@ -8,8 +8,10 @@ Description:
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
 Imports:
 	leaflet,
 	shiny,
 	memoise,
+	protolite,
 	leaflet.lagniappe
