--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Imports:
-	leaflet,
-	shiny,
-	memoise,
-	protolite,
-	leaflet.lagniappe
+	httr,
+	xml2,
+	protolite
