I forgot package sf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(read.XML)
 export(read.tile)
 export(read.viewport.tiles)
 import(protolite)
+import(sf)
 import(xml2)
 importFrom(httr,GET)
 importFrom(httr,content)
