--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,13 @@ URL: https://github.com/bwcompton/readMVT
 BugReports: https://github.com/bwcompton/readMVT/issues
 License: GPL-3
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.2.3
 Imports:
 	httr,
 	xml2,
 	protolite (>= 2.2.1),
 	sf
+Remotes:
+	jeroen/protolite
 Suggests:
 	leaflet
