Push memoise initialization into read.viewport.tiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(layer.info)
 export(read.XML)
 export(read.tile)
 export(read.viewport.tiles)
+import(memoise)
 import(protolite)
 import(sf)
 import(xml2)
